[metadata]
name = dalec
version = attr: dalec.__version__
url = https://dev.webu.coop/w/i/dalec
author = Webu
author_email = contact@webu.coop
description = Extendable app to retrieve external contents from various external sources.
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://dev.webu.coop/w/i/dalec
    Tracker = https://dev.webu.coop/w/i/dalec/issues

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django>=2.2

[flake8]
exclude = build,.git,.tox,./tests/.env,dalec_prime/migrations
max-line-length = 99

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = dalec
line_length = 99
multi_line_output = 5
