[metadata]
name = dalec
version = attr: dalec.__version__
url = https://dev.webu.coop/w/i/dalec
author = Webu
author_email = contact@webu.coop
description = Extendable app to retrieve external contents from various external sources.
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://dev.webu.coop/w/i/dalec
    Tracker = https://dev.webu.coop/w/i/dalec/issues

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django>=2.2

[options.extras_require]
testing =
    requests
    beautifulsoup4
    coverage>=3.7.0
    black
    flake8
    mypy
    types-requests

[flake8]
exclude = build,.git,.tox,./tests/.env,dalec_prime/migrations,venv
max-line-length = 99

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = dalec
line_length = 99
multi_line_output = 5

[mypy]
ignore_missing_imports = True
warn_unused_configs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
no_implicit_reexport = True
strict_equality = True
